# omniview

./: .env.example  .gitignore  .pre-commit-config.yaml  .windsurfrules  CLAUDE.md  LICENSE  README.md  docker-compose.yml  omniview-lite.html
.github/workflows/: ci.yml
deploy/: Dockerfile.engine  Dockerfile.ui  nginx.conf
docs/: ARCHITECTURE.md
engine/: pyproject.toml
engine/app/: main.py
engine/app/api/: deps.py  router.py  routes_auth.py  routes_events.py  routes_export.py  routes_health.py  routes_videos.py  schemas.py
engine/app/cli/: main.py
engine/app/core/: auth.py  clips.py  config.py  converter.py  errors.py  event_grouping.py  ingest.py  integrity.py  motion.py  pii_gate.py  progress.py  retention.py  thumbnails.py  video_probe.py
engine/app/db/: base.py  models.py
engine/app/db/migrations/: env.py
engine/app/db/migrations/versions/: 6fdf3c98af9c_initial_schema.py
engine/app/i18n/: pt_br.json
engine/app/observability/: logging.py  metrics.py
engine/app/services/: audit_service.py  export_service.py  provenance_service.py
engine/app/workers/: scan_worker.py
engine/tests/fixtures/: generate_videos.py
engine/tests/integration/: test_api.py  test_export_api.py  test_motion_pipeline.py
engine/tests/unit/: test_converter.py  test_errors.py  test_event_grouping.py  test_export.py  test_integrity.py  test_services.py
ui/: package-lock.json  package.json
ui/src/: App.tsx
ui/src/components/: EventGallery.tsx  EventTimeline.tsx  FiltersBar.tsx  Layout.tsx  RequireAuth.tsx  ReviewPanel.tsx  Sidebar.tsx  VideoPlayer.tsx
(+13 files in other folders)
